home-cluster/frigate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  labels:
    kubernetes.io/metadata.name: frigate
