home-cluster/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: frigate.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  ingressClassName: traefik
  rules:
    - host: frigate.kube.stevearnett.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 5000
  tls:
    - hosts:
        - frigate.kube.stevearnett.com
      secretName: wildcard-stevearnett-com-tls
