home-cluster/frigate/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frigate-allow-egress
  namespace: frigate
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - protocol: TCP
      port: 5000
    - protocol: TCP
      port: 8554
    - protocol: UDP
      port: 8554
  - from:
    - ipBlock: # Allow direct access from local network for feeds
        cidr: 192.168.1.0/24
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
    - protocol: TCP
      port: 443
  - to: # Allow talking to all other pods/namespaces
    - namespaceSelector: {}
  - to: # Allow talking to the local network (Cameras/API)
    - ipBlock:
        cidr: 192.168.1.0/24
